crates/parser/tests/snapshots/parser_test__let_with_type_annotation.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: f
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 11
            - 14
      body:
        Do:
          exprs:
            - Let:
                name: x
                ty:
                  Named:
                    name: Int
                    span:
                      - 24
                      - 27
                value:
                  Lit:
                    value:
                      Int: 5
                    span:
                      - 30
                      - 31
                body: ~
                span:
                  - 17
                  - 31
            - Var:
                name: x
                span:
                  - 33
                  - 34
          span:
            - 15
            - 36
      span:
        - 0
        - 36
