crates/parser/tests/snapshots/parser_test__list_literal.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        List:
          elements:
            - Lit:
                value:
                  Int: 1
                span:
                  - 11
                  - 12
            - Lit:
                value:
                  Int: 2
                span:
                  - 14
                  - 15
            - Lit:
                value:
                  Int: 3
                span:
                  - 17
                  - 18
          span:
            - 10
            - 19
      span:
        - 0
        - 19
