crates/parser/tests/snapshots/parser_test__m12_boolean_ops.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: both
      visibility: Private
      params:
        - name: a
          ty:
            Named:
              name: Bool
              span:
                - 25
                - 29
          span:
            - 22
            - 29
        - name: b
          ty:
            Named:
              name: Bool
              span:
                - 34
                - 38
          span:
            - 31
            - 38
      constraints: []
      return_type:
        Named:
          name: Bool
          span:
            - 43
            - 47
      body:
        BinaryOp:
          op: And
          lhs:
            Var:
              name: a
              span:
                - 50
                - 51
          rhs:
            Var:
              name: b
              span:
                - 55
                - 56
          span:
            - 50
            - 56
      span:
        - 13
        - 56
  - DefFn:
      name: either
      visibility: Private
      params:
        - name: a
          ty:
            Named:
              name: Bool
              span:
                - 71
                - 75
          span:
            - 68
            - 75
        - name: b
          ty:
            Named:
              name: Bool
              span:
                - 80
                - 84
          span:
            - 77
            - 84
      constraints: []
      return_type:
        Named:
          name: Bool
          span:
            - 89
            - 93
      body:
        BinaryOp:
          op: Or
          lhs:
            Var:
              name: a
              span:
                - 96
                - 97
          rhs:
            Var:
              name: b
              span:
                - 101
                - 102
          span:
            - 96
            - 102
      span:
        - 57
        - 102
  - DefFn:
      name: negate
      visibility: Private
      params:
        - name: a
          ty:
            Named:
              name: Bool
              span:
                - 117
                - 121
          span:
            - 114
            - 121
      constraints: []
      return_type:
        Named:
          name: Bool
          span:
            - 126
            - 130
      body:
        UnaryOp:
          op: Not
          operand:
            Var:
              name: a
              span:
                - 134
                - 135
          span:
            - 133
            - 135
      span:
        - 103
        - 135
  - DefFn:
      name: complex
      visibility: Private
      params:
        - name: a
          ty:
            Named:
              name: Bool
              span:
                - 151
                - 155
          span:
            - 148
            - 155
        - name: b
          ty:
            Named:
              name: Bool
              span:
                - 160
                - 164
          span:
            - 157
            - 164
        - name: c
          ty:
            Named:
              name: Bool
              span:
                - 169
                - 173
          span:
            - 166
            - 173
      constraints: []
      return_type:
        Named:
          name: Bool
          span:
            - 178
            - 182
      body:
        BinaryOp:
          op: Or
          lhs:
            BinaryOp:
              op: And
              lhs:
                Var:
                  name: a
                  span:
                    - 185
                    - 186
              rhs:
                Var:
                  name: b
                  span:
                    - 190
                    - 191
              span:
                - 185
                - 191
          rhs:
            UnaryOp:
              op: Not
              operand:
                Var:
                  name: c
                  span:
                    - 196
                    - 197
              span:
                - 195
                - 197
          span:
            - 185
            - 197
      span:
        - 136
        - 197
