crates/parser/tests/snapshots/parser_test__m12_field_access.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefType:
      name: Point
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 31
                    - 34
            - - y
              - Named:
                  name: Int
                  span:
                    - 39
                    - 42
      deriving: []
      span:
        - 13
        - 44
  - DefFn:
      name: get_x
      visibility: Private
      type_params: []
      params:
        - name: p
          ty:
            Named:
              name: Point
              span:
                - 58
                - 63
          span:
            - 55
            - 63
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 68
            - 71
      body:
        FieldAccess:
          expr:
            Var:
              name: p
              span:
                - 74
                - 75
          field: x
          span:
            - 74
            - 77
      span:
        - 45
        - 77
